<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddBookActivity">

    <TextView
        android:id="@+id/txtTitleAddBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-condensed-medium"
        android:text="@string/txtTittleAddBook"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:text="@string/txtTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitleAddBook" />

    <EditText
        android:id="@+id/EditTxtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hintEdittxtTitle"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/txPages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtPages"
        app:layout_constraintStart_toStartOf="@+id/txtTitle"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <EditText
        android:id="@+id/EditTxtPages"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/hintEdittxtPages"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txPages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/txtAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtAuthor"
        app:layout_constraintStart_toStartOf="@+id/txPages"
        app:layout_constraintTop_toBottomOf="@+id/txPages" />

    <EditText
        android:id="@+id/EditTxtAuthor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtAuthor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/txtEditorial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtEditorial"
        app:layout_constraintStart_toStartOf="@+id/txtAuthor"
        app:layout_constraintTop_toBottomOf="@+id/txtAuthor" />

    <EditText
        android:id="@+id/EditTxtEditorial"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtEditorial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/txtDescrption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtDescription"
        app:layout_constraintStart_toStartOf="@+id/txtEditorial"
        app:layout_constraintTop_toBottomOf="@+id/txtEditorial" />

    <EditText
        android:id="@+id/EditTxtDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtDescrption"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <TextView
        android:id="@+id/txtPhotoURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/txtPhotoURL"
        app:layout_constraintStart_toStartOf="@+id/txtDescrption"
        app:layout_constraintTop_toBottomOf="@+id/txtDescrption" />

    <EditText
        android:id="@+id/EditTxtPhotURL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/txtPhotoURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="103dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddNewBook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.647"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_check"
        app:maxImageSize="35dp"
        android:focusable="true"
        android:tint="@color/colorWhite"
        app:backgroundTint="@color/colorPrimary"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnFlotCanceled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnAddNewBook"
        app:layout_constraintEnd_toStartOf="@+id/btnAddNewBook"
        app:layout_constraintTop_toTopOf="@+id/btnAddNewBook"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/ic_cancel"
        app:maxImageSize="35dp"
        android:clickable="true"
        android:focusable="true"
        android:tint="@color/colorWhite"
        app:backgroundTint="@color/colorPrimary"/>

</androidx.constraintlayout.widget.ConstraintLayout>